NavigationBar basic design, selected activity icon gets different color

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".activities.SearchActivity"/>
         <activity android:name=".activities.GalleryActivity" />
-        <activity android:name=".activities.CalenderActivity" />
+        <activity android:name=".activities.CalendarActivity" />
         <activity android:name=".activities.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
