--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+
         android:name=".common.MyApp"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.SearchActivity"/>
-        <activity android:name=".activities.GalleryActivity" />
-        <activity android:name=".activities.CalendarActivity" />
-        <activity android:name=".activities.HomeActivity">
+        <activity android:name=".activities.SearchActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity android:name=".activities.GalleryActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.CalendarActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.HomeActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
