--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
 
-        android:name=".common.MyApp"
+        android:name=".firebase.MyApp"
         android:theme="@style/AppTheme">
 
         <activity android:name=".search.SearchActivity"
