--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'net.danlew:android.joda:2.10.6.1'
+
 
     // Firebase components
     implementation 'com.google.firebase:firebase-auth:19.4.0'
