--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,6 @@ dependencies {
 
 
 
-
-
     // External packages
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
@@ -52,9 +50,12 @@ dependencies {
 
     // Firebase components
     implementation 'com.google.firebase:firebase-auth:19.4.0'
-    implementation 'com.google.firebase:firebase-firestore:21.6.0'
+    implementation 'com.google.firebase:firebase-firestore:21.7.0'
     implementation 'com.google.firebase:firebase-storage:19.2.0'
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    implementation 'com.google.firebase:firebase-database:19.5.0'
+
+
 
 
 
