--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,49 +2,47 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.idan_koren_israeli.sailtracker">
 
-    <uses-feature android:name="android.hardware.camera"
+    <uses-feature
+        android:name="android.hardware.camera"
         android:required="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".common.MyApp"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
-        android:name=".common.MyApp"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".search.SearchActivity"
-            android:screenOrientation="portrait"
-            />
-
-
-        <activity android:name=".gallery.GalleryActivity"
+        <activity android:name=".calendar.AddEventActivity"></activity>
+        <activity
+            android:name=".search.SearchActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".gallery.GalleryActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.CHOOSER" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="text/plain" />
             </intent-filter>
-
         </activity>
-
-        <activity android:name=".calendar.CalendarActivity"
-            android:screenOrientation="portrait"/>
-
-        <activity android:name=".home.HomeActivity"
+        <activity
+            android:name=".calendar.CalendarActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".home.HomeActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
-
-
 
 </manifest>
