--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".gallery.PhotoInspectActivity"></activity>
-        <activity android:name=".my_sails.MySailsActivity" />
+        <activity android:name=".history.HistoryActivity" />
         <activity android:name=".calendar.AddEventActivity" />
         <activity
             android:name=".search.SearchActivity"
