Implemented search other user's galleries by phone number

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
             android:screenOrientation="portrait"/>
         <activity
             android:name=".search.SearchActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing"/>
         <activity
             android:name=".gallery.GalleryActivity"
             android:screenOrientation="portrait"
@@ -45,15 +46,16 @@
         <activity
             android:name=".home.HomeActivity"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
 
+        <!-- FOR CAMERA CAPTURE SAVE PURPOSE -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.idan_koren_israeli.sailtracker.fileprovider"
