--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission. ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
 
 
     <application
@@ -23,6 +25,9 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!-- ACTIVITIES -->
+
         <activity android:name=".activity.SplashActivity"
             android:screenOrientation="portrait"
             >
@@ -64,6 +69,21 @@
         <activity
             android:name=".activity.CalendarActivity"
             android:screenOrientation="portrait" />
+
+        <service
+            android:name=".notification.EventAvailableService"
+            android:enabled="true">
+            </service>
+
+        <!-- RECEIVER -->
+        <receiver android:name=".notification.EventBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+
+        </receiver>
+
+
 
 
         <!-- FOR CAMERA CAPTURE SAVE PURPOSE -->
