Implemented "Watch" feature, push notification to register

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,7 +71,7 @@
             android:screenOrientation="portrait" />
 
         <service
-            android:name=".notification.EventAvailableService"
+            android:name=".notification.EventWatchService"
             android:enabled="true">
             </service>
 
