--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission. ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
 
 
@@ -70,15 +71,21 @@
             android:name=".activity.CalendarActivity"
             android:screenOrientation="portrait" />
 
+
+        <!-- NOTIFICATION SERVICE -->
         <service
             android:name=".notification.EventWatchService"
             android:enabled="true">
             </service>
 
-        <!-- RECEIVER -->
-        <receiver android:name=".notification.EventBroadcastReceiver">
+        <!-- BROADCAST RECEIVER -->
+        <receiver android:name=".notification.EventBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true"
+            android:label="RestartServiceWhenStopped">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="RESTART_SERVICE"/>
             </intent-filter>
 
         </receiver>
